fix: overflow issue

--- a/src/widgets/school-menu/ui/school-menu/school-menu.module.scss
+++ b/src/widgets/school-menu/ui/school-menu/school-menu.module.scss
@@ -30,6 +30,10 @@
 
     &:has(:nth-child(5)) {
       width: 512px;
+
+      @include media-tablet {
+        width: unset;
+      }
     }
 
     @include media-mobile-landscape {
